--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,6 @@ body{
 }
 
 .container{
-    width: 1000px;
     margin: 200px auto;
     display: flex;
     flex-wrap: wrap;
@@ -25,3 +24,21 @@ body{
     align-items: center;
 }
 
+header{
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding: 14px;
+    align-items: center;
+    background-color: white;
+}
+
+main{
+    height: calc(100vh - 160px);
+}
+
+footer{
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
