--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,46 +1,51 @@
-*{
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: lightgray;
-}
-
-.container{
+  }
+  
+  body {
+    background: #ededed;
+  }
+  
+  main {
+    height: calc(1160px - 160px);
+    width: 1000px;
+    margin: 2rem auto;
+  }
+  
+  .container {
     height: 100%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    
-
-}
-
-.cell{
+  }
+  
+  header {
+    height: 80px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+  }
+  
+  footer {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    background-color: white;
+  }
+  
+  main {
+    height: calc(100vh - 160px);
+  }
+  
+  
+  .cell {
     border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-
-header{
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    padding: 14px;
-    align-items: center;
-    background-color: white;
-}
-
-main{
-    height: calc(100vh - 160px);
-}
-
-footer{
-    background-color: white;
-    height: 80px;
-    display: flex;
-    align-items: center;
-}
+  }
